    - Added startup settings to adjust braking and friction force of vehicle wagons.
    - Added startup setting to control maximum weight of load-able vehicles.
    - Added compability with Krastorio 2 Advanced Tank (beta graphics), if you change the Maximum Weight to more than 150000.
    - Added alt-mode icons showing what vehicle is loaded in each wagon.
    - Uploaded by robot256
  Changes:
    - Rebalanced wagon weights and stats so that vehicle weight is treated fairly.  Hauling tanks needs multiple locomotives now.
    - Fixed compatibility with Train Overhaul so wagon speed is set to match the Nuclear Locomotive.
    - Updated German locale with the many new strings, thanks to ST-DDT and Pi-C.
    - Improved locale structure with cross-referencing.
    - Improved behavior when players move or get in vehicles mid-loading.
    - Changed selection indicator to an area highlight instead of giant arrows.
    - Changed unloading zone to oblong shape surrounding wagon.
    - Improved loading ramp graphics.
  Bugfixes:
    - Fixed minimum and maximum parameters on weight scaling startup settings.
    - Moved final weight calculations to data-final-fixes so that they are consistent with the final wagon and vehicle weights set by other mods.
---------------------------------------------------------------------------------------------------
Version: 2.18.2
Date: 2020-03-02
  Features:
    - Changed loading beam graphics to a conveyor belt.
  Changes:
    - Removed dependency on StdLib mod.
  Bugfixes:
    - Fixed compatibility with Mobile Factory mod by fixing how last_user and player_index are saved and restored.
    - Fixed compatibility with Creative Mod by handling the case when magic robots with no inventory deconstruct a loaded wagon.
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 24. 1. 2020
  Changes:
    - Initial support for Factorio 0.18.
  Bugfixes: