@@ -7,6 +7,7 @@ load-locked-vehicle-error=Error: Cannot load __1__ because __2__ has locked it.
 load-owned-vehicle-error=Error: Cannot load __1__, it belongs to  __2__.
 loaded-wagon-busy-error=This wagon is already being unloaded!
 loaded-wagon-error=Error: No space to create loaded wagon. __ENTITY__vehicle-wagon__ item spilled on ground.
+location-too-close-error=Error: Selected location is too close to the __1__.
 location-too-far-away-error=Error: Selected location is too far from the __1__.
 migrate-prototype-error=Migration Error: Deleting contents of wagon #__1__ because vehicle prototype "__2__" does not exist.
 migrate-prototype-warning=WARNING: If any deleted vehicle was renamed by another mod, please contact the Vehicle Wagon 2 mod author.
