@@ -8,6 +8,8 @@ Date: 2020-05-XX
     - Added startup setting to control maximum weight of load-able vehicles.
     - Added compability with Krastorio 2 Advanced Tank (beta graphics), if you change the Maximum Weight to more than 150000.
     - Added alt-mode icons showing what vehicle is loaded in each wagon.
+    - Added custom boolean parameter "vehicle_loaded" to "script_raised_destroy" event when vehicle was loaded successfully.
+    - Added custom boolean parameter "vehicle_unloaded" to "script_raised_built" event when vehicle was unloaded successfully.
     - Uploaded by robot256
   Changes:
     - Rebalanced wagon weights and stats so that vehicle weight is treated fairly.  Hauling tanks needs multiple locomotives now.
@@ -17,10 +19,12 @@ Date: 2020-05-XX
     - Improved behavior when players move or get in vehicles mid-loading.
     - Changed selection indicator to an area highlight instead of giant arrows.
     - Changed unloading zone to oblong shape surrounding wagon.
+    - Changed unloading behavior so that vehicles always point outwards, driving off the ramp.
     - Improved loading ramp graphics.
   Bugfixes:
     - Fixed minimum and maximum parameters on weight scaling startup settings.
     - Moved final weight calculations to data-final-fixes so that they are consistent with the final wagon and vehicle weights set by other mods.
+    - Added mininum distance based on vehicle size to avoid accidentally destroying the wago when unloading.
 ---------------------------------------------------------------------------------------------------
 Version: 2.18.2
 Date: 2020-03-02
